[package]
name = "netcom"
version = "0.1.0"
edition = "2021"

[lib]
name = "netcom"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
unicode-segmentation = "1.10.1"
httparse = "1.8.0"
chrono = "0.4.31"
cxx = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
rustls-native-certs = "0.7.0"
webpki-roots = "0.26.0"
rustls = "0.22.1"
tokio-rustls = "0.25.0"

[build-dependencies]
cxx-build = "1.0"


